First commited as before_61961_rev1