@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2014 Tom Schindl and others.
+ * Copyright (c) 2006, 2015 Tom Schindl and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
  * Contributors:
  *     Tom Schindl - initial API and implementation
  *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 414565
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 475361
  *******************************************************************************/
 
 package org.eclipse.jface.snippets.viewers;
@@ -104,7 +105,7 @@ public class Snippet056BooleanCellEditor {
 
 			@Override
 			protected Object getValue(Object element) {
-				return new Boolean(((MyModel) element).flag);
+				return Boolean.valueOf(((MyModel) element).flag);
 			}
 
 			@Override
@@ -250,7 +251,7 @@ public class Snippet056BooleanCellEditor {
 	public class MyModel {
 
 		public MyModel parent;
-		public List<MyModel> child = new ArrayList<MyModel>();
+		public List<MyModel> child = new ArrayList<>();
 		public int counter;
 		public boolean flag;
 
